--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "imap-simple": "^5.1.0",
     "pdf-parse": "^1.1.1",
+    "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1"
   }
 }
