--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "docx": "^9.5.1",
+    "dotenv": "^17.2.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.5.1",
     "marked": "^16.2.1",
